Criando um resource dictionary para aplicar estilos aos elementos da view

--- a/MAUICalculator/MVVM/CalcView.xaml
+++ b/MAUICalculator/MVVM/CalcView.xaml
@@ -5,6 +5,13 @@
              Title="CalcView">
         <Grid RowDefinitions=".4*, .6*">
 
+            <VerticalStackLayout>
 
+                <Label Text="5 * 5" StyleClass="LabelText, LabelOperations"/>
+                <Label Text="25" StyleClass="LabelText, LabelResult"/>
+            </VerticalStackLayout>
+            <Grid Grid.Row="1">
+                <BoxView />
+            </Grid>
         </Grid>
 </ContentPage>
