--- a/MAUICalculator/Resources/Styles/CalcDictionary.xaml
+++ b/MAUICalculator/Resources/Styles/CalcDictionary.xaml
@@ -2,5 +2,30 @@
 <?xaml-comp compile="true" ?>
 <ResourceDictionary xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml">
+    <!--#region VerticalStackLayout-->
+    <Style TargetType="VerticalStackLayout">
+        <Setter Property="VerticalOptions"
+                Value="CenterAndExpand"/>
+        <Setter Property="Margin"
+                Value="0,0,25,0"/>
+    </Style>
+    <!--#endregion-->
 
+    <!--#region label-->
+    <Style Class="LabelText" TargetType="Label">
+        <Setter Property="TextColor"
+                Value="{AppThemeBinding Light={StaticResource LightText},
+                Dark={StaticResource DarkText}}"/>
+        <Setter Property="HorizontalTextAlignment"
+                Value="End"/>
+    </Style>
+
+    <Style Class="LabelOperations" TargetType="Label">
+        <Setter Property="FontSize" Value="25"/>
+    </Style>
+
+    <Style Class="LabelResult" TargetType="Label">
+        <Setter Property="FontSize" Value="50"/>
+    </Style>
+    <!--#endregion-->
 </ResourceDictionary>
