Implementando o botao de calcular utilizando a lib Dangl.Calculator

--- a/MAUICalculator/MVVM/CalcView.xaml
+++ b/MAUICalculator/MVVM/CalcView.xaml
@@ -118,7 +118,8 @@
                 <Button Text="="
                         Grid.Column="3"
                         Grid.Row="4"
-                        Style="{StaticResource RedButton}"/>
+                        Style="{StaticResource RedButton}"
+                        Command="{Binding CalculateCommand}"/>
                 <!--#region-->
 
             </Grid>
